--- a/src/main/java/fxml/Ventas/Promociones/ModalTipoProd.fxml
+++ b/src/main/java/fxml/Ventas/Promociones/ModalTipoProd.fxml
@@ -48,6 +48,6 @@
             <TableColumn fx:id="columna_desTip" prefWidth="245.0" text="Descripción" />
         </columns>
       </TableView>
-      <Button layoutX="458.0" layoutY="352.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="60.0" text="Agregar" />
+      <Button layoutX="458.0" layoutY="352.0" mnemonicParsing="false" onAction="#agregarDatosTipo" prefHeight="25.0" prefWidth="60.0" text="Agregar" />
    </children>
 </AnchorPane>
