--- a/src/main/java/fxml/Ventas/Pedidos/Pedidos.fxml
+++ b/src/main/java/fxml/Ventas/Pedidos/Pedidos.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -34,15 +33,15 @@
             </AnchorPane>
             <AnchorPane layoutX="40.0" layoutY="84.0" prefHeight="192.0" prefWidth="250.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="50.0">
                <children>
-                  <TextField fx:id="clienteSearch" layoutX="130.0" layoutY="67.0" prefHeight="25.0" prefWidth="106.0" />
+                  <TextField fx:id="BuscarCliente" layoutX="130.0" layoutY="67.0" prefHeight="25.0" prefWidth="106.0" />
                   <Button layoutX="176.0" layoutY="150.0" mnemonicParsing="false" onAction="#buscarPedido" prefHeight="25.0" prefWidth="60.0" text="Buscar" />
                   <Label layoutX="12.0" layoutY="30.0" prefHeight="21.0" prefWidth="114.0" text="Codigo:">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <ComboBox fx:id="estadoSearch" layoutX="130.0" layoutY="104.0" prefHeight="25.0" prefWidth="106.0" />
-                  <TextField fx:id="pedidoSearch" layoutX="130.0" layoutY="30.0" prefHeight="25.0" prefWidth="106.0" />
+                  <ComboBox fx:id="BuscarEstado" layoutX="130.0" layoutY="104.0" prefHeight="25.0" prefWidth="106.0" />
+                  <TextField fx:id="BuscarCodigo" layoutX="130.0" layoutY="30.0" prefHeight="25.0" prefWidth="106.0" />
                   <Label layoutX="12.0" layoutY="67.0" prefHeight="21.0" prefWidth="114.0" text="Cliente:">
                      <font>
                         <Font size="14.0" />
@@ -57,11 +56,11 @@
             </AnchorPane>
             <AnchorPane layoutX="29.0" layoutY="342.0" prefHeight="330.0" prefWidth="250.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">
                <children>
-                  <TableView fx:id="tablaPedidos" layoutX="12.0" layoutY="19.0" prefHeight="202.0" prefWidth="225.0">
+                  <TableView fx:id="TablaPedido" layoutX="12.0" layoutY="19.0" prefHeight="228.0" prefWidth="225.0">
                      <columns>
-                        <TableColumn fx:id="pedidoId" prefWidth="65.0" text="Codigo" />
-                        <TableColumn fx:id="clientePedido" prefWidth="182.0" text="Cliente" />
-                        <TableColumn prefWidth="75.0" text="Estado" />
+                        <TableColumn fx:id="CodigoPedidoColumna" prefWidth="65.0" text="Codigo" />
+                        <TableColumn fx:id="ClientePedidoColumna" prefWidth="182.0" text="Cliente" />
+                        <TableColumn fx:id="EstadoPedidoColumna" prefWidth="75.0" text="Estado" />
                      </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -80,7 +79,7 @@
             <AnchorPane layoutX="2.0" layoutY="2.0" prefHeight="51.0" prefWidth="750.0" AnchorPane.bottomAnchor="522.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
                   <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="51.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" />
-                  <Label layoutX="38.0" layoutY="11.0" text="Detalle Pedido:">
+                  <Label fx:id="LabelPedido" layoutX="38.0" layoutY="11.0" text="Detalle Pedido:">
                      <font>
                         <Font size="20.0" />
                      </font>
@@ -108,8 +107,8 @@
                               <Font size="14.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="producto" layoutX="280.0" layoutY="5.0" prefHeight="25.0" prefWidth="240.0" />
-                        <Button fx:id="agregarProducto" layoutX="529.0" layoutY="6.0" mnemonicParsing="false" onAction="#handleAgregarProducto" prefHeight="20.0" prefWidth="20.0" text="+">
+                        <TextField fx:id="VerProducto" layoutX="280.0" layoutY="5.0" prefHeight="25.0" prefWidth="240.0" />
+                        <Button fx:id="buscarProducto" layoutX="529.0" layoutY="6.0" mnemonicParsing="false" onAction="#handleAgregarProducto" prefHeight="20.0" prefWidth="20.0" text="+">
                            <font>
                               <Font size="10.0" />
                            </font>
@@ -144,8 +143,8 @@
                      <content>
                         <AnchorPane prefHeight="239.0" prefWidth="175.0">
                            <children>
-                              <Button layoutX="71.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="A" AnchorPane.topAnchor="0.0" />
-                              <Button layoutX="71.0" layoutY="84.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="X" />
+                              <Button layoutX="71.0" mnemonicParsing="false" onAction="#agregaProducto" prefHeight="40.0" prefWidth="40.0" text="A" AnchorPane.topAnchor="0.0" />
+                              <Button layoutX="71.0" layoutY="84.0" mnemonicParsing="false" onAction="#eliminarProducto" prefHeight="40.0" prefWidth="40.0" text="X" />
                               <Button layoutX="71.0" layoutY="157.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="D" AnchorPane.bottomAnchor="50.0" />
                               <Label layoutX="45.0" layoutY="55.0" text="Agregar Producto" />
                               <Label layoutX="43.0" layoutY="124.0" text="Eliminar Producto" />
@@ -160,7 +159,7 @@
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="171.0" prefWidth="712.0">
                      <children>
-                        <AnchorPane fx:id="pedidoForm" prefHeight="205.0" prefWidth="764.0">
+                        <AnchorPane fx:id="pedidoForm" prefHeight="165.0" prefWidth="764.0">
                            <children>
                               <Label layoutX="14.0" layoutY="14.0" text="Cliente:">
                                  <font>
@@ -177,12 +176,12 @@
                                     <Font size="14.0" />
                                  </font>
                               </Label>
-                              <Label layoutX="14.0" layoutY="93.0" text="Dir. Envío:">
+                              <Label layoutX="14.0" layoutY="127.0" text="Dir. Envío:">
                                  <font>
                                     <Font size="14.0" />
                                  </font>
                               </Label>
-                              <Label layoutX="10.0" layoutY="127.0" text="Dir. Facturación:">
+                              <Label layoutX="14.0" layoutY="93.0" text="Dir. Facturación:">
                                  <font>
                                     <Font size="14.0" />
                                  </font>
@@ -192,26 +191,25 @@
                                     <Font size="14.0" />
                                  </font>
                               </Label>
-                              <RadioButton fx:id="tipoDocBoleta" layoutX="162.0" layoutY="54.0" mnemonicParsing="false" text="Boleta" />
-                              <RadioButton fx:id="tipoDocFactura" layoutX="93.0" layoutY="54.0" mnemonicParsing="false" text="Factura" />
-                              <TextField fx:id="clienteSh" layoutX="99.0" layoutY="12.0" prefHeight="25.0" prefWidth="180.0" />
-                              <Label layoutX="292.0" layoutY="15.0" text="DNI:">
+                              <RadioButton fx:id="TipoDocBoleta" layoutX="162.0" layoutY="54.0" mnemonicParsing="false" text="Boleta" />
+                              <RadioButton fx:id="TipoDocFactura" layoutX="93.0" layoutY="54.0" mnemonicParsing="false" text="Factura" />
+                              <TextField fx:id="VerCliente" layoutX="99.0" layoutY="12.0" prefHeight="25.0" prefWidth="180.0" />
+                              <Label fx:id="VerDocumentoLabel" layoutX="292.0" layoutY="15.0" text="DNI:">
                                  <font>
                                     <Font size="14.0" />
                                  </font>
                               </Label>
-                              <TextField fx:id="ruc" layoutX="351.0" layoutY="13.0" prefHeight="25.0" prefWidth="134.0" />
-                              <DatePicker fx:id="fechaPed" layoutX="582.0" layoutY="49.0" prefHeight="25.0" prefWidth="134.0" />
-                              <TextField fx:id="envioDir" layoutX="123.0" layoutY="90.0" prefHeight="25.0" prefWidth="564.0" />
-                              <TextField fx:id="factDir" layoutX="123.0" layoutY="124.0" prefHeight="25.0" prefWidth="564.0" />
-                              <CheckBox fx:id="mismaDir" layoutX="14.0" layoutY="185.0" mnemonicParsing="false" text="Marque si ambas direcciones son la misma" />
-                              <ComboBox fx:id="moneda" layoutX="351.0" layoutY="49.0" prefHeight="25.0" prefWidth="134.0" />
+                              <TextField fx:id="VerDocumento" layoutX="351.0" layoutY="13.0" prefHeight="25.0" prefWidth="134.0" />
+                              <DatePicker fx:id="VerFecha" layoutX="582.0" layoutY="49.0" prefHeight="25.0" prefWidth="134.0" />
+                              <TextField fx:id="VerDireccionFacturacion" layoutX="123.0" layoutY="90.0" prefHeight="25.0" prefWidth="564.0" />
+                              <TextField fx:id="VerDireccionDespacho" layoutX="123.0" layoutY="124.0" prefHeight="25.0" prefWidth="564.0" />
+                              <ComboBox fx:id="VerMoneda" layoutX="351.0" layoutY="49.0" prefHeight="25.0" prefWidth="134.0" />
                               <Label layoutX="508.0" layoutY="16.0" text="Vendedor:">
                                  <font>
                                     <Font size="14.0" />
                                  </font>
                               </Label>
-                              <TextField fx:id="vendedorSh" layoutX="582.0" layoutY="12.0" prefHeight="25.0" prefWidth="134.0" />
+                              <TextField fx:id="VerVendedor" layoutX="582.0" layoutY="12.0" prefHeight="25.0" prefWidth="134.0" />
                            </children>
                         </AnchorPane>
                      </children>
