--- a/src/main/java/fxml/Ventas/Fletes/Fletes.fxml
+++ b/src/main/java/fxml/Ventas/Fletes/Fletes.fxml
@@ -1,27 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="572" prefWidth="1000.00" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/9" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Ventas.FletesController">
+<AnchorPane id="AnchorPane" prefHeight="572" prefWidth="1000.00" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Ventas.FletesController">
    <children>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="750.0" AnchorPane.topAnchor="0.0">
          <children>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="522.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
                   <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="24.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" />
-                  <Label layoutX="64.0" layoutY="7.0" text="Búsqueda">
+                  <Label layoutX="21.0" layoutY="10.0" text="Búsqueda">
                      <font>
                         <Font size="20.0" />
                      </font>
@@ -31,36 +36,36 @@
             </AnchorPane>
             <AnchorPane layoutY="50.0" prefHeight="250.0" prefWidth="250.0" AnchorPane.bottomAnchor="322.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0">
                <children>
-                  <TextField fx:id="busqCodigoFlete" layoutX="130.0" layoutY="30.0" prefHeight="25.0" prefWidth="106.0" />
+                  <TextField fx:id="busqCodigoFlete" layoutX="107.0" layoutY="28.0" prefHeight="25.0" prefWidth="136.0" />
                   <Label layoutX="12.0" layoutY="30.0" prefHeight="21.0" prefWidth="114.0" text="Cod. Flete:">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="12.0" layoutY="67.0" prefHeight="21.0" prefWidth="114.0" text="Tipo:">
+                  <Label layoutX="12.0" layoutY="67.0" prefHeight="21.0" prefWidth="87.0" text="Tipo:">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <ComboBox fx:id="busqTipoFlete" layoutX="130.0" layoutY="66.0" prefHeight="25.0" prefWidth="106.0" />
-                  <Label layoutX="12.0" layoutY="104.0" prefHeight="21.0" prefWidth="114.0" text="Fecha:">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <DatePicker fx:id="busqFlete" layoutX="130.0" layoutY="102.0" prefHeight="25.0" prefWidth="106.0" />
-                  <Button layoutX="175.0" layoutY="154.0" mnemonicParsing="false" onAction="#buscar_promocion" prefHeight="25.0" prefWidth="60.0" text="Buscar" />
+                  <ComboBox fx:id="busqTipoFlete" layoutX="107.0" layoutY="65.0" prefHeight="25.0" prefWidth="136.0" />
+                  <Button layoutX="175.0" layoutY="154.0" mnemonicParsing="false" onAction="#buscarFlete" prefHeight="25.0" prefWidth="60.0" text="Buscar" />
+                  <TextField fx:id="busqCodigoProdCat" layoutX="107.0" layoutY="113.0" prefHeight="25.0" prefWidth="136.0" />
+                  <Label layoutX="8.0" layoutY="101.0" prefHeight="50.0" prefWidth="96.0" text="Cod Producto - Categoria" wrapText="true" />
                </children>
             </AnchorPane>
             <AnchorPane layoutY="286.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="250.0">
                <children>
-                  <TableView fx:id="tabla_fletes" layoutX="12.0" layoutY="15.0" prefHeight="200.0" prefWidth="227.0">
+                  <Button layoutX="141.0" layoutY="277.0" mnemonicParsing="false" onAction="#visualizarFlete" prefHeight="25.0" prefWidth="96.0" text="Visualizar" />
+                  <TableView fx:id="TablaFletes" layoutX="12.0" layoutY="15.0" prefHeight="200.0" prefWidth="241.0">
                      <columns>
-                        <TableColumn fx:id="columna_codigo" prefWidth="75.0" text="Código" />
-                        <TableColumn fx:id="columna_tipo" prefWidth="151.0" text="Tipo" />
+                        <TableColumn fx:id="ColumnaCodigo" prefWidth="75.0" text="Código" />
+                        <TableColumn fx:id="ColumnaTipo" prefWidth="151.0" text="Tipo" />
+                        <TableColumn fx:id="ColumnaProducto" prefWidth="75.0" text="Prod / Cat" />
                      </columns>
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
                   </TableView>
-                  <Button layoutX="141.0" layoutY="277.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="96.0" text="Visualizar" />
                </children>
             </AnchorPane>
          </children>
@@ -70,117 +75,73 @@
             <AnchorPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="522.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
                   <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="24.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" />
-                  <Label layoutX="133.0" layoutY="10.0" text="Flete:">
+                  <Label layoutX="31.0" layoutY="10.0" text="Flete:">
                      <font>
                         <Font size="20.0" />
                      </font>
                   </Label>
                   <Line endX="600.0" layoutX="125.0" layoutY="49.0" startX="-100.0" />
-                  <Label fx:id="labelNombrePromocion" layoutX="200.0" layoutY="10.0" text="idFlete">
-                     <font>
-                        <Font size="20.0" />
-                     </font>
-                  </Label>
                </children>
             </AnchorPane>
-            <AnchorPane prefHeight="522.0" prefWidth="750.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0">
+            <AnchorPane fx:id="anchor_formulario" layoutY="50.0" prefHeight="522.0" prefWidth="750.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0">
                <children>
-                  <Label layoutX="27.0" layoutY="30.0" text="Código de flete:">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="txtFieCodigoFlete" layoutX="196.0" layoutY="28.0" prefHeight="25.0" prefWidth="104.0" />
-                  <Label layoutX="395.0" layoutY="32.0" text="Flente entre:">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <DatePicker fx:id="dpFecha1" layoutX="484.0" layoutY="28.0" prefHeight="25.0" prefWidth="101.0" />
-                  <Label layoutX="601.0" layoutY="32.0" text="y" />
-                  <DatePicker fx:id="dpFecha2" layoutX="623.0" layoutY="28.0" prefHeight="25.0" prefWidth="101.0" />
-                  <Label layoutX="27.0" layoutY="67.0" text="Tipo de flete:">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <ComboBox fx:id="comboBoxTipoFlete" layoutX="196.0" layoutY="65.0" prefHeight="25.0" prefWidth="160.0" />
-                  <Label layoutX="395.0" layoutY="67.0" text="Prioridad:">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <ComboBox fx:id="comboxPrioridad" layoutX="484.0" layoutY="65.0" prefWidth="160.0" />
-                  <Line endX="600.0" layoutX="124.0" layoutY="140.0" startX="-100.0" stroke="#bcaaaa" />
-                  <Label layoutX="26.0" layoutY="160.0" text="Compro">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <Spinner fx:id="spCompro" layoutX="90.0" layoutY="158.0" prefHeight="25.0" prefWidth="80.0" />
-                  <Label layoutX="186.0" layoutY="160.0" prefHeight="20.0" prefWidth="85.0" text="unidades de ">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="txtFieCodigoProducto1" editable="false" layoutX="274.0" layoutY="158.0" prefHeight="25.0" prefWidth="200.0" />
-                  <Button fx:id="botonTipo1" layoutX="493.0" layoutY="158.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="104.0" text="Agregar Tipo">
-                     <font>
-                        <Font size="10.0" />
-                     </font>
-                  </Button>
-                  <Button fx:id="botonCategoria1" layoutX="620.0" layoutY="158.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="104.0" text="Agregar Categoria">
-                     <font>
-                        <Font size="10.0" />
-                     </font>
-                  </Button>
-                  <Label layoutX="31.0" layoutY="205.0" text="Y llevo">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <Spinner fx:id="spLlevo" layoutX="90.0" layoutY="201.0" prefHeight="25.0" prefWidth="80.0" />
-                  <Label layoutX="186.0" layoutY="205.0" prefHeight="20.0" prefWidth="85.0" text="unidades de ">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="txtFieCodigoProducto2" editable="false" layoutX="274.0" layoutY="201.0" prefHeight="25.0" prefWidth="200.0" />
-                  <Button fx:id="botonTipo2" layoutX="493.0" layoutY="201.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="104.0" text="Agregar Tipo">
-                     <font>
-                        <Font size="10.0" />
-                     </font>
-                  </Button>
-                  <Button fx:id="botonCategoria2" layoutX="620.0" layoutY="201.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="104.0" text="Agregar Categoria">
-                     <font>
-                        <Font size="10.0" />
-                     </font>
-                  </Button>
-                  <Line endX="600.0" layoutX="124.0" layoutY="243.0" startX="-100.0" stroke="#bcaaaa" />
-                  <Spinner fx:id="spPorc" editable="true" layoutX="26.0" layoutY="260.0" prefHeight="25.0" prefWidth="67.0" />
-                  <Label layoutX="110.0" layoutY="262.0" text="\% del precio de:">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="txtFieCodigoProducto3" editable="false" layoutX="274.0" layoutY="260.0" prefHeight="25.0" prefWidth="200.0" />
-                  <Button fx:id="botonTipo3" layoutX="493.0" layoutY="260.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="104.0" text="Agregar Tipo">
-                     <font>
-                        <Font size="10.0" />
-                     </font>
-                  </Button>
-                  <Button fx:id="botonCategoria3" layoutX="620.0" layoutY="260.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="104.0" text="Agregar Categoria">
-                     <font>
-                        <Font size="10.0" />
-                     </font>
-                  </Button>
-                  <Line endX="600.0" layoutX="124.0" layoutY="357.0" startX="-100.0" stroke="#bcaaaa" />
-                  <Label layoutX="14.0" layoutY="310.0" text="Concepto:">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="desc_concepto" layoutX="100.0" layoutY="310.0" prefHeight="25.0" prefWidth="620.0" />
+                  <TitledPane animated="false" layoutX="18.0" layoutY="19.0" prefHeight="169.0" prefWidth="725.0" text="Informacion General">
+                    <content>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="163.0" prefWidth="723.0">
+                           <children>
+                              <Label layoutX="14.0" layoutY="30.0" text="Código de flete:">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Label>
+                              <TextField fx:id="VerCodigoFlete" layoutX="183.0" layoutY="28.0" prefHeight="25.0" prefWidth="104.0" />
+                              <Label layoutX="382.0" layoutY="32.0" text="Flente entre:">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Label>
+                              <DatePicker fx:id="VerFechaInicial" layoutX="471.0" layoutY="28.0" prefHeight="25.0" prefWidth="101.0" />
+                              <Label layoutX="588.0" layoutY="32.0" text="y" />
+                              <DatePicker fx:id="VerFechaFinal" layoutX="610.0" layoutY="28.0" prefHeight="25.0" prefWidth="101.0" />
+                              <Label layoutX="14.0" layoutY="81.0" text="Tipo de flete:">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Label>
+                              <ComboBox fx:id="VerTipo" layoutX="183.0" layoutY="78.0" prefHeight="25.0" prefWidth="160.0" />
+                              <Label layoutX="382.0" layoutY="81.0" text="Moneda:">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Label>
+                              <ComboBox fx:id="VerMoneda" layoutX="511.0" layoutY="79.0" prefHeight="25.0" prefWidth="160.0" />
+                           </children>
+                        </AnchorPane>
+                    </content>
+                  </TitledPane>
+                  <TitledPane animated="false" layoutX="18.0" layoutY="208.0" prefHeight="226.0" prefWidth="725.0" text="Valor">
+                    <content>
+                      <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="201.0" prefWidth="723.0">
+                           <children>
+                              <Button fx:id="botonTipo2" layoutX="561.0" layoutY="57.0" mnemonicParsing="false" onAction="#agregarProducto" prefHeight="23.0" prefWidth="104.0" text="Agregar Producto">
+                                 <font>
+                                    <Font size="10.0" />
+                                 </font>
+                              </Button>
+                              <Button fx:id="botonCategoria3" layoutX="561.0" layoutY="109.0" mnemonicParsing="false" onAction="#agregarCategoria" prefHeight="23.0" prefWidth="104.0" text="Agregar Categoria">
+                                 <font>
+                                    <Font size="10.0" />
+                                 </font>
+                              </Button>
+                              <TextField fx:id="VerValor" layoutX="113.0" layoutY="80.0" />
+                              <Label layoutX="14.0" layoutY="84.0" text="Valor Flete:" />
+                              <Label fx:id="NombreTipo" layoutX="113.0" layoutY="112.0" prefHeight="17.0" prefWidth="158.0" text="Kilometros por Metro Cúbico" textAlignment="CENTER" />
+                              <Label fx:id="AbrvTipo" layoutX="164.0" layoutY="136.0" text="KM/M^3" textAlignment="CENTER" />
+                              <TextField fx:id="VerProdCat" layoutX="362.0" layoutY="80.0" prefHeight="25.0" prefWidth="183.0" />
+                           </children>
+                        </AnchorPane>
+                    </content>
+                  </TitledPane>
                </children>
             </AnchorPane>
          </children>
